# normal-modes-of-coupled-pendulums

./: .gitignore  README.md  mkdocs.yml
backend_node/: package.json  pnpm-lock.yaml  server.js
docs/: architecture.md  backend.md  development.md  docs_site.md  engine_cpp.md  frontend.md  index.md  mathematical_model.md
docs/javascripts/: mathjax.js
engine_cpp/: CMakeLists.txt
engine_cpp/src/: main.cpp  pendulum_system.cpp  pendulum_system.hpp  simulation_engine.cpp  simulation_engine.hpp
frontend_web/: .env.example  index.html  package.json
frontend_web/src/: App.tsx  index.css  types.ts
frontend_web/src/components/: ControlsPanel.tsx
frontend_web/src/lib/: pendulumMath.ts
